--- a/install
+++ b/install
@@ -10,18 +10,31 @@ has()   { type "$1" &> /dev/null ; }
 trap onerr ERR
 
 SCRIPT_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
-# shellcheck source=urls.sh
-source "$SCRIPT_DIR/urls.sh"
+# shellcheck source=.env
+source "$SCRIPT_DIR/.env"
+
 DOWNLOAD_DIR="$HOME/Downloads"
 LOCAL_DIR="$HOME/.local"
 BIN_DIR="$LOCAL_DIR/bin"
 SRC_DIR="$LOCAL_DIR/src"
 
-usage() {
-  printf 'Usage: %s [OPTIONS]\n\n' "$(basename "$0")"
-  printf 'OPTIONS\n'
-  printf ' -l\tLink only (do not install packages)\n'
-}
+declare -A urls
+urls[nvim]="https://github.com/neovim/neovim/releases/download/nightly/nvim-linux64.tar.gz"
+urls[prettyping]="https://raw.githubusercontent.com/denilsonsa/prettyping/master/prettyping"
+urls[exa]="https://github.com/ogham/exa/releases/download/v0.9.0/exa-linux-x86_64-0.9.0.zip"
+urls[glow]="https://github.com/charmbracelet/glow/releases/download/v1.0.2/glow_1.0.2_linux_x86_64.tar.gz"
+urls[youtube-dl]="https://yt-dl.org/downloads/latest/youtube-dl"
+urls[yq]="https://github.com/mikefarah/yq/releases/download/v4.6.1/yq_linux_amd64.tar.gz"
+urls[fnm]="https://github.com/Schniz/fnm/releases/download/v1.23.0/fnm-linux.zip"
+urls[nord-dircolors]="https://github.com/arcticicestudio/nord-dircolors"
+urls[nord-tmux]="https://github.com/arcticicestudio/nord-tmux"
+urls[nord-vim]="https://github.com/arcticicestudio/nord-vim"
+urls[ale]="https://github.com/dense-analysis/ale.git"
+urls[odin]="https://github.com/Tetralux/odin.vim"
+urls[zsh-syntax-highlighting]="https://github.com/zsh-users/zsh-syntax-highlighting"
+urls[zsh-autosuggestions]="https://github.com/zsh-users/zsh-autosuggestions"
+urls[zsh-history-substring-search]="https://github.com/zsh-users/zsh-history-substring-search"
+urls[zsh-completions]="https://github.com/zsh-users/zsh-completions"
 
 ################################################################################
 # Create a symlink
@@ -88,7 +101,6 @@ install_packages() {
   mkdir -p "$BIN_DIR"
 
   if ! has "nvim"; then
-    set -x
     info "Installing nvim"
     tar xmzf "$(download "${urls[nvim]}")" --strip-components=1 -C "$LOCAL_DIR"
   fi
@@ -146,13 +158,11 @@ install_nord_theme() {
 
   if [[ ! -d "$SRC_DIR/nord-tmux" ]]; then
     git clone --depth 1 "${urls[nord-tmux]}" "$SRC_DIR/nord-tmux"
-    mkdir -p "$HOME"/.tmux
     symlink "$SRC_DIR/nord-tmux/nord.tmux" "$HOME"/.tmux/nord.tmux
   fi
 
   if [[ ! -d "$SRC_DIR/nord-vim" ]]; then
     git clone --depth 1 "${urls[nord-vim]}" "$SRC_DIR/nord-vim"
-    mkdir -p "$HOME"/.vim/colors
     symlink "$SRC_DIR/nord-vim/colors/nord.vim" "$HOME"/.vim/colors/nord.vim
   fi
 }
@@ -172,6 +182,7 @@ install_vim_plugins() {
 # zsh plugins
 ################################################################################
 install_zsh_plugins() {
+  local dest_dir
   for plugin in zsh-syntax-highlighting zsh-autosuggestions \
     zsh-history-substring-search zsh-completions; do
     dest_dir="$HOME/.local/src/zsh-users/$plugin"
@@ -185,6 +196,7 @@ install_zsh_plugins() {
 # link dotfiles
 ################################################################################
 link_dotfiles() {
+  local dotfiles_dir
   dotfiles_dir="$SCRIPT_DIR/dotfiles"
   readarray -t dotfiles < <(cd "$dotfiles_dir" && find "." -mindepth 1 -type f)
   for dotfile in "${dotfiles[@]}"; do
@@ -196,6 +208,7 @@ link_dotfiles() {
 # link tools
 ################################################################################
 link_tools() {
+  local tools_dir tools
   tools_dir="$SCRIPT_DIR/tools"
   readarray -t tools < <(cd "$tools_dir" && find "." -mindepth 1 -type f)
   for tool in "${tools[@]}"; do
@@ -207,8 +220,7 @@ link_tools() {
 # check deps
 ################################################################################
 check_deps() {
-  readarray -t deps < "$SCRIPT_DIR/deps.txt"
-  for dep in "${deps[@]}"; do
+  for dep in bash git curl unzip; do
     if ! command -v "$dep" > /dev/null 2>&1; then
       err "$dep not found"
       return 1
@@ -217,11 +229,17 @@ check_deps() {
 }
 
 main() {
-  local link_only
-  link_only=false
-  while getopts 'l' flag; do
+  usage() {
+    printf 'Usage: %s [OPTIONS]\n\n' "$(basename "$0")"
+    printf 'OPTIONS\n'
+    printf ' -e\tInstall everything. Default is link only.\n'
+    printf '\tAlternatively, can be set in environment with: EVERYTHING=true\n'
+  }
+
+  local everything="${EVERYTHING:-false}"
+  while getopts 'e' flag; do
     case "${flag}" in
-      l) link_only=true ;;
+      e) everything=true ;;
       *) echo "Unexpected option ${flag}"; usage; exit 1 ;;
     esac
   done
@@ -229,7 +247,7 @@ main() {
 
   link_dotfiles
   link_tools
-  if ! $link_only; then
+  if $everything; then
     check_deps
     install_packages
     install_nord_theme
