--- a/install
+++ b/install
@@ -2,8 +2,9 @@
 
 set -euo pipefail
 
+dbg()   { if [[ -n "${DEBUG:-}" ]]; then 1>&2 printf 'DEBUG: %s\n' "$*"; fi; }
 err()   { 1>&2 printf '%sERROR: %s%s\n' "$(tput setaf 1)" "$*" "$(tput sgr0)"; }
-warn()  { 1>&2 printf '%sWARNING: %s%s\n' "$(tput setaf 3)" "$*" "$(tput sgr0)"; }
+warn()  { printf '%sWARNING: %s%s\n' "$(tput setaf 3)" "$*" "$(tput sgr0)"; }
 info()  { printf '%s\n' "$*"; }
 onerr() { local s=$?; err "$0:${BASH_LINENO[0]} $BASH_COMMAND"; exit $s; }
 has()   { type "$1" &> /dev/null ; } 
@@ -37,11 +38,17 @@ symlink() {
   src="$(realpath -sm "$src")"
   dest="$(realpath -sm "$dest")"
 
-  # destination exists and isn't a link; rename it.
   if [[ -f "$dest" && ! -h "$dest" ]]; then
+    # destination exists and isn't a link; rename it.
     backup="$(dirname "$dest")/$(basename "$dest").$(date '+%s')"
     info "Renaming file $dest -> $backup"
     mv -f "$dest" "$backup"
+  elif [[ ! -e "$dest" ]]; then
+    # destination exists and is a broken symlink; remove it.
+    dbg "$dest exists and is broken"
+    rm -f "$dest"
+  else
+    dbg "do nothing for $dest"
   fi
 
   # if the link doesn't exist, create it
@@ -145,6 +152,15 @@ install_packages() {
     install -D -v -m 755 -t "$LOCAL_BIN_DIR" "$DOWNLOAD_DIR/fnm"
   fi
 
+  # pnpm
+  if ! has "pnpm"; then
+    npm install -g pnpm
+  fi
+
+  if [[ ! -d "$PNPM_HOME" ]]; then
+    pnpm setup
+  fi
+
   # glow
   if ! has "glow"; then
     info "Installing glow"
@@ -173,9 +189,13 @@ install_nord_theme() {
   symlink "$(gitclone "${urls[nord-vim]}")/colors/nord.vim" "$HOME/.vim/colors/nord.vim" 
 }
 
+install_vim_goinstall() {
+  vim -S <(echo -e "GoInstall \n q \n q") > /dev/null 2>&1
+}
+
 install_vim_plugins() {
-  for name in ale odin; do
-    gitclone "${urls[$name]}" "$HOME/.vim/pack/git-plugins/start"
+  for name in ale odin vim-go; do
+    gitclone "${urls[$name]}" "$HOME/.vim/pack/git-plugins/start" > /dev/null
   done
 }
 
@@ -185,7 +205,7 @@ install_vim_plugins() {
 install_zsh_plugins() {
   for plugin in zsh-syntax-highlighting zsh-autosuggestions \
       zsh-history-substring-search zsh-completions; do
-    gitclone "${urls["$plugin"]}" "$LOCAL_SRC_DIR/zsh-users"
+    gitclone "${urls["$plugin"]}" "$LOCAL_SRC_DIR/zsh-users" > /dev/null
   done
 }
 
@@ -247,6 +267,7 @@ main() {
     install_packages
     install_nord_theme
     install_vim_plugins
+    install_vim_goinstall
     install_zsh_plugins
   fi
 
